--- a/src/TicTacWindow.form
+++ b/src/TicTacWindow.form
@@ -47,13 +47,11 @@
         <Property name="text" type="java.lang.String" value="It&apos;s x&apos;s turn"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
-      <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel1MouseClicked"/>
-      </Events>
     </Component>
     <Container class="TicTacWidget" name="ticTacWidget1">
       <Events>
         <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ticTacWidget1MouseReleased"/>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="ticTacWidget1KeyReleased"/>
       </Events>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
